# translateMovie

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  translateMovie.sh
src/: translate_movie.py
src/translate_movie/: __init__.py  core.py
tests/: test_config.py
